--- a/style.css
+++ b/style.css
@@ -8,12 +8,15 @@ html, body #fullheight {
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   background-color: black;
+  position: relative;
 }
 
 .container {
   height:100%;
+  width: 100%;
   background-color: black;
-margin-top: 70%;
+  position: absolute;
+  bottom: 0%;
   
 }
 
